package={name='ui', version='0.0.0', edition='2024', description='Vulkano/Wayland without Smithay/libwayland-sys'}
example=[
#view: (crate)
{name='edit', path='examples/edit.rs', required-features=['edit']},
]

build-dependencies={wgsl = {path='wgsl', optional = true}}

[dependencies]
#array-concat='*' # unexpected `cfg` condition value: `const_panic`
fehler='*'
itertools='*' # fixme: optional
num={ git='https://github.com/Matthias-Fauconneau/num'}
vector={ git='https://github.com/Matthias-Fauconneau/vector', features=['int_roundings']}
image={ git='https://github.com/Matthias-Fauconneau/image' }
rustix={ version='*', features=['fs','mm','net','event'] }
bytemuck={ version='*', features=['extern_crate_alloc'] }

vulkano={ git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'] }
drm-fourcc='*'

text-size={ version='*', optional=true }
unicode-segmentation={ version='*', optional=true }
rustybuzz={ version='*', optional=true }
derive_more={ version='*', features=['deref'], optional=true }
owning_ref={ version='*', optional=true }
kurbo={ version='*', optional=true }
glob={ version='*', optional=true }
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv', optional=true}

[features]
text=['dep:text-size','dep:unicode-segmentation','dep:rustybuzz','dep:derive_more','dep:owning_ref','dep:kurbo','dep:glob','dep:vulkano-spirv','dep:wgsl']
edit=['text']
graphic=[]

[patch.'https://github.com/vulkano-rs/vulkano']
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier fix
[patch.'https://github.com/Matthias-Fauconneau/image']
image = { path = '../image' }