package={name='view', version='0.0.0', edition='2024', description='Vulkano/Wayland without Smithay/libwayland-sys'}
build-dependencies={wgsl = {path='../../wgsl'}} # HACK: links view.wgsl for ui::text::shader{view} # FIXME: figure out symbol name when linked as part of crate

[dependencies]
bytemuck='*'
ui={path='../..', features=['text']}
vulkano={git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros']}
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv'}

[patch.'https://github.com/vulkano-rs/vulkano'] # Also switches vulkano dependency for vulkano-spirv to use same version
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier
[patch.crates-io] # In case vulkano-spirv would depend on crates-io version. But currently it tracks git version (breaking changes in vulkano::shader::spirv))
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier
[patch.'https://github.com/Matthias-Fauconneau/image']
image = { path = '../../../image' }
