package = { name='view', version='0.0.0', edition='2024', description = 'View EXR image'}
features = { jxl=['dep:jxl-oxide'], default = ['jxl'] }
[dependencies]
bytemuck='*'
num = { git='https://github.com/Matthias-Fauconneau/num' }
vector = { git='https://github.com/Matthias-Fauconneau/vector' }
image = { git='https://github.com/Matthias-Fauconneau/image', features = ['io', 'exr'] }
ui = { path='../..' }
vulkano = { git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'] } # same version as ui (which needs drm modifier from git version)
vulkano-spirv = { git='https://github.com/Matthias-Fauconneau/vulkano-spirv' }

jxl-oxide = {  version='*', features=['lcms2'], optional=true }
#rawloader='*'
rawler={git='https://github.com/dnglab/dnglab'}

[build-dependencies]
naga = { version='*', features = ['wgsl-in','spv-out'] }
bytemuck = { version='*' }

[patch.'https://github.com/vulkano-rs/vulkano'] # Also switches vulkano dependency for vulkano-spirv to use same version
vulkano = { git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier

[patch.crates-io] # In case vulkano-spirv would depend on crates-io version. But currently it tracks git version (breaking changes in vulkano::shader::spirv))
vulkano = { git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier

[patch.'https://github.com/Matthias-Fauconneau/num']
num = {path='../../../num'}
[patch.'https://github.com/Matthias-Fauconneau/vector']
vector = {path='../../../vector'}
[patch.'https://github.com/Matthias-Fauconneau/image']
image = {path='../../../image'}
[patch.'https://github.com/dnglab/dnglab']
rawler = {path='../../../rawler/rawler'} # optional image
