package={name='triangle', version='0.0.0', edition='2024', description='Vulkano/Wayland without Smithay/libwayland-sys'}

[dependencies]
bytemuck='*'
ui={path='../..'}
vulkano={git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros']} # same version as ui (which needs drm modifier from git version)
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv'}

[build-dependencies]
wgsl = {path='../../wgsl'}

[patch.'https://github.com/vulkano-rs/vulkano'] # Also switches vulkano dependency for vulkano-spirv to use same version
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier

[patch.crates-io] # In case vulkano-spirv would depend on crates-io version. But currently it tracks git version (breaking changes in vulkano::shader::spirv))
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier
